populate and evaluate refactor