@@ -1,7 +1,7 @@
 package org.opencds.cqf.fhir.cql;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 import org.hl7.fhir.instance.model.api.IBase;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.instance.model.api.IBaseDatatype;
@@ -31,11 +31,11 @@ public class ExtensionResolver {
 
     @SuppressWarnings({"unchecked", "rawtypes"})
     public <E extends IBaseExtension> void resolveExtensions(
-            IBase resource, List<E> extensions, String defaultLibraryUrl) {
+            IBase resource, List<E> extensions, Map<String, String> referencedLibraries) {
         for (var extension : extensions) {
             var nestedExtensions = extension.getExtension();
             if (nestedExtensions != null && !nestedExtensions.isEmpty()) {
-                resolveExtensions(resource, nestedExtensions, defaultLibraryUrl);
+                resolveExtensions(resource, nestedExtensions, referencedLibraries);
             }
             var value = extension.getValue();
             if (value instanceof IBaseHasExtensions) {
@@ -43,11 +43,11 @@ public class ExtensionResolver {
                 if (valueExtensions != null) {
                     var expressionExtensions = valueExtensions.stream()
                             .filter(e -> e.getUrl() != null && e.getUrl().equals(Constants.CQF_EXPRESSION))
-                            .collect(Collectors.toList());
-                    if (expressionExtensions != null && !expressionExtensions.isEmpty()) {
+                            .toList();
+                    if (!expressionExtensions.isEmpty()) {
                         var expression = expressionExtensions.get(0).getValue();
                         if (expression != null) {
-                            var result = getExpressionResult(expression, defaultLibraryUrl, resource);
+                            var result = getExpressionResult(expression, referencedLibraries, resource);
                             if (result != null) {
                                 extension.setValue(result);
                             }
@@ -58,13 +58,15 @@ public class ExtensionResolver {
         }
     }
 
-    protected IBaseDatatype getExpressionResult(IBaseDatatype expression, String defaultLibraryUrl, IBase resource) {
+    protected IBaseDatatype getExpressionResult(
+            IBaseDatatype expression, Map<String, String> referencedLibraries, IBase resource) {
         List<IBase> result = null;
         if (expression instanceof org.hl7.fhir.r4.model.Expression) {
             result = libraryEngine.resolveExpression(
                     subjectId.getIdPart(),
-                    CqfExpression.of((org.hl7.fhir.r4.model.Expression) expression, defaultLibraryUrl),
+                    CqfExpression.of((org.hl7.fhir.r4.model.Expression) expression, referencedLibraries),
                     parameters,
+                    null,
                     bundle,
                     resource,
                     null);
@@ -73,8 +75,9 @@ public class ExtensionResolver {
         if (expression instanceof org.hl7.fhir.r5.model.Expression) {
             result = libraryEngine.resolveExpression(
                     subjectId.getIdPart(),
-                    CqfExpression.of((org.hl7.fhir.r5.model.Expression) expression, defaultLibraryUrl),
+                    CqfExpression.of((org.hl7.fhir.r5.model.Expression) expression, referencedLibraries),
                     parameters,
+                    null,
                     bundle,
                     resource,
                     null);
